--- a/css/gamingquest.css
+++ b/css/gamingquest.css
@@ -91,8 +91,8 @@
         margin-top: 50px;
         text-align: center;
         font-family: 'montserrat', 'sans-serif';
-        font-weight: bold;
-        color: rgba(255, 255, 255, 1);
+        font-weight: bolder;
+        color: orange;
     }
     
     .maincontain {
@@ -101,7 +101,7 @@
         width: 60%;
         height: auto;
         margin: auto;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.7);
     }
     
     .coll2 {
