--- a/css/quescss.css
+++ b/css/quescss.css
@@ -1,8 +1,10 @@
-  * {
-      margin: 0;
-      padding: 0;
-  }
-  /*
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+/*
 .backimg{
     width: 100%;
     height: 600px;
@@ -36,245 +38,256 @@
   flex: 48%;
 }
  */
-  
-  @font-face {
-      font-family: 'GeForce Bold';
-      src: url('../font/GeForce-Bold.eot');
-      src: url('../font/GeForce-Bold.eot?#iefix') format('embedded-opentype'), url('../font/GeForce-Bold.woff') format('woff'), url('../font/GeForce-Bold.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-  }
-  
-  @media(max-width:800px) {
-      .titleTMtest {
-          margin-bottom: 100px;
-      }
-  }
-  
-  input[type=text] {
-      padding: 15px;
-      width: 80%;
-      border: none;
-      background-color: rgba(255, 255, 255, 0);
-      border-bottom: 3px solid orange;
-      /* box-shadow: 2px 2px 50px rgba(0,0,0,0.3); */
-      box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
-      padding: auto;
-      font-size: 25px;
-      margin: auto;
-      margin-bottom: 30px;
-      color: black;
-      font-family: 'Montserrat', sans-serif;
-  }
-  
-  .titleground {
-      background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .background {
-      background-image: url(../images/Wallpapers-Laptops-007.jpg), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 1));
-      z-index: 2;
-      width: 100%;
-      padding-top: 50px;
-      background-size: 100% 100%;
-      height: 790px;
-      background-attachment: fixed;
-      overflow: scroll;
-  }
-  
-  .main-container {
-      box-sizing: border-box;
-      width: 70%;
-      margin: auto;
-      margin-top: 5px;
-      border-radius: 50px;
-      border: 1px solid black;
-      /* background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
-      background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .main-container-sub {
-      width: 60%;
-      margin: auto;
-      padding-top: 50px;
-  }
-  
-  @media(max-width:800px) {
-      input[type=text] {
-          width: 100%;
-      }
-      .main-container {
-          width: 100%;
-      }
-  }
-  
-  .stepscontainer {
-      display: flex;
-      flex-direction: row;
-      width: 65%;
-      margin: auto;
-  }
-  
-  .stepbutton {
-      padding: 15px;
-      width: 150px;
-      border-radius: 50%;
-      font-family: geForce bold;
-      border: 2px solid orange;
-      color: white;
-      margin: auto;
-      font-size: 20px;
-      z-index: -100;
-  }
-  
-  .coll1 {
-      height: 100px;
-      width: 33.333%;
-      /* border: 1px solid red; */
-      text-align: center;
-  }
-  
-  @media (max-width:800px) {
-      .stepscontainer {
-          flex-direction: column;
-          width: 100%;
-          margin: auto;
-      }
-      .coll1 {
-          width: 100%;
-          margin: auto;
-      }
-  }
-  /*custom buttons*/
-  /* The container */
-  
-  .main-container-radio {
-      display: inline-block;
-      box-sizing: border-box;
-      width: 49%;
-      margin-top: 20px;
-      color: white;
-      font-family: 'Montserrat', sans-serif;
-      /* padding-left: 50px; */
-      /* background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
-      /* background-color: rgba(0, 0, 0, 0.73); */
-  }
-  
-  .container-mid {
-      width: 50%;
-      border: 1px solid red;
-  }
-  
-  .container {
-      display: block;
-      position: relative;
-      padding-left: 35px;
-      margin-bottom: 12px;
-      cursor: pointer;
-      font-size: 23px;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      margin-top: 10px;
-      margin-bottom: 25px;
-      /* transition: 1s; */
-      padding: 40px;
-  }
-  /* .container:hover {
-      background-color: orange;
-  } */
-  /* Hide the browser's default radio button */
-  
-  .container input {
-      position: absolute;
-      opacity: 0;
-      cursor: pointer;
-  }
-  /* Create a custom radio button */
-  
-  .checkmark {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 25px;
-      width: 25px;
-      background-color: #eee;
-      border-radius: 50%;
-  }
-  /* On mouse-over, add a grey background color */
-  
-  .container:hover input~.checkmark {
-      background-color: #ccc;
-  }
-  /* When the radio button is checked, add a blue background */
-  
-  .container input:checked~.checkmark {
-      background-color: #2196F3;
-  }
-  /* Create the indicator (the dot/circle - hidden when not checked) */
-  
-  .checkmark:after {
-      content: "";
-      position: absolute;
-      display: none;
-  }
-  /* Show the indicator (dot/circle) when checked */
-  
-  .container input:checked~.checkmark:after {
-      display: block;
-  }
-  /* Style the indicator (dot/circle) */
-  
-  .container .checkmark:after {
-      top: 9px;
-      left: 9px;
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: white;
-  }
-  /************************************************custom checkbox********************************/
-  
-  .main-container-check {
-      display: flex;
-      flex-direction: row;
-      height: auto;
-  }
-  
-  .main-container-check-child {
-      width: 500px;
-      height: auto;
-      font-family: geForce bold;
-      color: Orange;
-  }
-  
-  @media(max-width:800px) {
-      .main-container-check {
-          display: flex;
-          flex-direction: column;
-          height: auto;
-      }
-      .main-container-check-child {
-          width: 100%;
-          height: auto;
-      }
-  }
-  
-  .flex_budget {
-      display: flex;
-      flex-direction: row;
-  }
-  
-  .coll3 {
-      width: 50%;
-  }
-  
-  @media(max-width:800px) {
-      .flex_budget {
-          flex-direction: column;
-      }
-      .coll3 {
-          width: 100%;
-      }
-  }
+
+@font-face {
+    font-family: 'GeForce Bold';
+    src: url('../font/GeForce-Bold.eot');
+    src: url('../font/GeForce-Bold.eot?#iefix') format('embedded-opentype'), url('../font/GeForce-Bold.woff') format('woff'), url('../font/GeForce-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@media(max-width:800px) {
+    .titleTMtest {
+        margin-bottom: 100px;
+    }
+}
+
+input[type=text] {
+    padding: 15px;
+    width: 80%;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    border-bottom: 3px solid orange;
+    /* box-shadow: 2px 2px 50px rgba(0,0,0,0.3); */
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+    padding: auto;
+    font-size: 25px;
+    margin: auto;
+    margin-bottom: 30px;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.titleground {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.background {
+    background-image: url(../images/Wallpapers-Laptops-007.jpg), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 1));
+    z-index: 2;
+    width: 100%;
+    padding-top: 50px;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    overflow: scroll;
+}
+
+.main-container {
+    box-sizing: border-box;
+    width: 70%;
+    margin: auto;
+    margin-top: 5px;
+    border-radius: 50px;
+    border: 1px solid black;
+    /* background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+@media(max-width:800px) {
+    .main-container {
+        width: 100%;
+    }
+}
+
+.main-container-sub {
+    width: 60%;
+    margin: auto;
+    padding-top: 50px;
+}
+
+@media(max-width:800px) {
+    input[type=text] {
+        width: 100%;
+    }
+    .main-container {
+        width: 100%;
+    }
+    .main-container-sub {
+        width: 80%;
+    }
+}
+
+.stepscontainer {
+    display: flex;
+    flex-direction: row;
+    width: 65%;
+    margin: auto;
+}
+
+.stepbutton {
+    padding: 15px;
+    width: 150px;
+    border-radius: 50%;
+    font-family: geForce bold;
+    border: 2px solid orange;
+    color: white;
+    margin: auto;
+    font-size: 20px;
+    z-index: -100;
+}
+
+.coll1 {
+    height: 100px;
+    width: 33.333%;
+    /* border: 1px solid red; */
+    text-align: center;
+}
+
+@media (max-width:800px) {
+    .stepscontainer {
+        flex-direction: column;
+        width: 100%;
+        margin: auto;
+    }
+    .coll1 {
+        width: 100%;
+        margin: auto;
+    }
+}
+
+
+/*custom buttons*/
+
+
+/* The container */
+
+.main-container-radio {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 20px;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    height: auto;
+    /* padding-left: 50px; */
+    /* background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
+    /* background-color: rgba(0, 0, 0, 0.73); */
+}
+
+.main-container-radio label {
+    cursor: pointer;
+    transition: 0.6s;
+}
+
+.main-container-radio label {
+    display: inline-block;
+    text-align: left;
+    width: 29%;
+    font-size: 25px;
+    border-right: 1px solid orange;
+}
+
+.main-container-radio input[type="radio"]:checked+label {
+    background-color: orange;
+}
+
+.container-mid {
+    width: 50%;
+}
+
+@media(max-width:800px) {
+    .main-container-radio label {
+        width: 100%;
+        width: auto;
+        display: block;
+        font-size: 19px;
+        text-align: center;
+        border-left: 1px solid orange;
+    }
+    .main-container-radio input[type="radio"]:checked+label {
+        background-color: orange;
+        box-sizing: border-box;
+    }
+}
+
+
+/* .container { */
+
+.main-container-check {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+}
+
+.main-container-check-child {
+    width: 500px;
+    height: auto;
+    font-family: geForce bold;
+    color: Orange;
+    font-size: 25px;
+}
+
+.textcenter {
+    margin-left: 40px;
+    margin-top: 0px;
+}
+
+@media(max-width:800px) {
+    .textcenter {
+        margin-left: 0px;
+    }
+}
+
+.main-container-check-child img {
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked+img {
+    background-color: orange;
+}
+
+@media(max-width:800px) {
+    .main-container-check {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        text-align: center;
+    }
+    .main-container-check-child {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
+}
+
+input[type="checkbox"] {
+    width: 23px;
+    height: 23px;
+    margin-right: 10px;
+    position: relative;
+    margin-top: 20px;
+}
+
+button {
+    font: 20px 'montserrat', sans-serif;
+    padding: 10px;
+}
+
+button {
+    font: 20px 'montserrat', sans-serif;
+    padding: 10px;
+}
+
+#infobox {
+    position: absolute;
+    top: 50%;
+    left: 46%;
+    transform: translate(-50%, -50%);
+    color: rgba(255, 165, 0, 0.8);
+    padding: 20px;
+    font-size: 25px;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.6);
+    display: none;
+}
