--- a/css/aboutuscss.css
+++ b/css/aboutuscss.css
@@ -1,22 +1,22 @@
 * {
     margin: 0;
 }
+
 @font-face {
     font-family: 'GeForce Bold';
     src: url('../font/GeForce-Bold.eot');
-    src: url('../font/GeForce-Bold.eot?#iefix') format('embedded-opentype'),
-    url('../font/GeForce-Bold.woff') format('woff'),
-    url('../font/GeForce-Bold.ttf') format('truetype');
+    src: url('../font/GeForce-Bold.eot?#iefix') format('embedded-opentype'), url('../font/GeForce-Bold.woff') format('woff'), url('../font/GeForce-Bold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    }
-.ourstory{
+}
+
+.ourstory {
     max-width: 100%;
     height: 500px;
-    background-image:url(../images/PngItem_4154082.png);
+    background-image: url(../images/PngItem_4154082.png);
     background-repeat: no-repeat;
     background-position: center;
-   /* background-image: linear-gradient(to right,rgba(255,165,0, 0.8),rgba(255,215,0,0.8));*/
+    /* background-image: linear-gradient(to right,rgba(255,165,0, 0.8),rgba(255,215,0,0.8));*/
     background-attachment: fixed;
     font-family: 'Neucha', cursive;
     font-weight: bolder;
@@ -26,61 +26,61 @@
     background-size: 100% 100%;
 }
 
-.geForce{
+.geForce {
     font-family: 'GeForce Bold';
 }
 
-.ourstory_text{
+.ourstory_text {
     margin: auto;
-    padding:50px;
+    padding: 50px;
     position: relative;
     top: 50%;
     font-family: 'Neucha', cursive;
     font-weight: bold;
     max-width: 800px;
-   /* background-color: rgba(255,255,255,0.1);*/
+    /* background-color: rgba(255,255,255,0.1);*/
     font-size: 33px;
     text-align: center;
     transform: translateY(-70%);
-
 }
 
-.what_container{
+.what_container {
     display: flex;
     flex-direction: row;
-    padding:70px;
+    padding: 70px;
 }
 
-.container-story{
+.container-story {
     display: flex;
     flex-direction: row;
-
 }
 
-.coll-1{
-    flex:45%;
+.coll-1 {
+    flex: 30%;
 }
 
-@media(max-width:768px){
-    .container-story{
+@media(max-width:768px) {
+    .container-story {
         flex-direction: column;
     }
 }
 
+
 /*for scroll cards*/
+
 .card1 {
-    box-shadow: 4px  rgba(0,0,0,0.2);
+    box-shadow: 4px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     width: 80%;
-  }
-  
-  .card1:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  .container_mine {
+}
+
+.card1:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container_mine {
     padding: 2px 16px;
     /*background-color: ;*/
     height: 100px;
     text-align: center;
-  }
+}
