--- a/css/quescss.css
+++ b/css/quescss.css
@@ -66,14 +66,15 @@ input[type=text] {
     margin: auto;
     margin-bottom: 30px;
     color: black;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .titleground {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-.background {
+
+/* .background {
     background-image: url(../images/Wallpapers-Laptops-007.jpg), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 1));
     z-index: 2;
     width: 100%;
@@ -81,7 +82,7 @@ input[type=text] {
     background-size: 100% 100%;
     background-attachment: fixed;
     overflow: scroll;
-}
+} */
 
 .main-container {
     box-sizing: border-box;
@@ -89,9 +90,9 @@ input[type=text] {
     margin: auto;
     margin-top: 5px;
     border-radius: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
-    background-color: rgba(0, 0, 0, 0.8);
+    /* background-color: rgba(0, 0, 0, 0.8); */
 }
 
 @media(max-width:800px) {
@@ -129,7 +130,7 @@ input[type=text] {
     padding: 15px;
     width: 150px;
     border-radius: 50%;
-    font-family: geForce bold;
+    font-family: 'Mukta', sans-serif;
     border: 2px solid orange;
     color: white;
     margin: auto;
@@ -167,8 +168,8 @@ input[type=text] {
     box-sizing: border-box;
     width: 100%;
     margin-top: 20px;
-    color: white;
-    font-family: 'Montserrat', sans-serif;
+    color: Black;
+    font-family: Arial, Helvetica, sans-serif;
     height: auto;
     /* padding-left: 50px; */
     /* background-color: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
@@ -190,6 +191,10 @@ input[type=text] {
 
 .main-container-radio input[type="radio"]:checked+label {
     background-color: orange;
+}
+
+.main-container-radio input[type="radio"]:not(:checked)+label {
+    background-color: white;
 }
 
 .container-mid {
@@ -223,12 +228,13 @@ input[type=text] {
 .main-container-check-child {
     width: 500px;
     height: auto;
-    font-family: geForce bold;
+    font-family: 'Mukta', sans-serif;
     color: Orange;
     font-size: 25px;
 }
 
-.textcenter {
+
+/* .textcenter {
     margin-left: 40px;
     margin-top: 0px;
 }
@@ -237,10 +243,42 @@ input[type=text] {
     .textcenter {
         margin-left: 0px;
     }
+} */
+
+
+/* .smallerbox {
+    width: 50%;
+    margin-left: 20px;
+    text-align: center;
+    border: 1px solid black;
+} */
+
+.smallerbox {
+    text-align: center;
+    width: 70%;
+}
+
+@media(max-width:800px) {
+    .smallerbox {
+        width: 100%;
+        margin-left: -10px;
+    }
 }
 
 .main-container-check-child img {
     cursor: pointer;
+}
+
+.main-container-check-child input[type="checkbox"]:checked+div {
+    background-color: orange;
+    color: black;
+    transition: 0.3s;
+}
+
+.main-container-check-child input[type="checkbox"]:not(:checked)+div {
+    background-color: white;
+    color: black;
+    transition: 0.2s;
 }
 
 input[type="checkbox"]:checked+img {
@@ -258,6 +296,7 @@ input[type="checkbox"]:checked+img {
         width: 100%;
         height: auto;
         margin: auto;
+        text-align: center;
     }
 }
 
@@ -267,16 +306,6 @@ input[type="checkbox"] {
     margin-right: 10px;
     position: relative;
     margin-top: 20px;
-}
-
-button {
-    font: 20px 'montserrat', sans-serif;
-    padding: 10px;
-}
-
-button {
-    font: 20px 'montserrat', sans-serif;
-    padding: 10px;
 }
 
 #infobox {
@@ -290,4 +319,14 @@ button {
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.6);
     display: none;
+}
+
+#next,
+#back {
+    padding: 10px 25px 10px 25px;
+    background-color: orange;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    border: none;
 }
